@@ -56,7 +56,7 @@
        <ul>
         <li>
          <a href="ballot-summary.html">List of candidates for the Board of Directors</a>
-         <li>
+         </li>
         </li>
         <li>
          <a href="electionrules.html">Election Rules and Timeline</a> - For 2001 elections.
