@@ -60,6 +60,13 @@
 <a NAME="News"></a><b>News</b>: 
 <ul>
  <li>
+  <strong>2001 Final list of election Candidates Announced</strong> <small>(11/10/2001)</small>
+  <blockquote>
+  All 2001 election candidates have been compiled into a <a href="ballot-summary.html">Final List 
+  of Candidates</a>. Voting begins on the 13th November and finishes on the 20th November.
+  </blockquote>
+ </li>
+ <li>
   <strong>2001 Election Schedule Announced</strong> <small>(10/22/2001)</small> 
   <blockquote>
    The 2001 elections for the GNOME Foundation Board of Directors
