@@ -30,7 +30,7 @@
       <center>
        <a href="elections.html">General Information</a> :&nbsp;
        <a href="electionrules.html">Rules & Timeline</a> :&nbsp;
-       <a href="ballot_summary.html">List of candidates</a> :&nbsp;
+       <a href="ballot-summary.html">List of candidates</a> :&nbsp;
        Director Overview :&nbsp;
        <a href="election-2000.html">2000</a>
       </center>
